# IncidentIQ

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  spike.py
catalog/: commands.yml
docs/: AGENT_ORCHESTRATION.md  CONTRACTS.md  DESIGN_BRIEF.md  DESIGN_DECISIONS_EXPLAINED.docx  DESIGN_DECISIONS_EXPLAINED.md  DESIGN_REVIEW.md  SCOPE.md  TASKS.md  latency_budget.md
docs/diagrams/: orchestration-graph.mmd
eval/harness/: structured_output_smoke.py
incidentiq/: catalog.py  config.py  contracts.py  db.py  errors.py  state.py
incidentiq/agents/: __init__.py  ast_code_retriever.py  patch_generator.py  rca_synthesizer.py  remediation.py  terminal.py  triage_router.py
incidentiq/api/: app.py  enricher.py  fingerprint.py  schema.sql  store.py  webhooks.py
incidentiq/graph/: __init__.py  build.py  checkpointer.py  routing.py
incidentiq/llm/: ollama_client.py  warmup.py
incidentiq/retrieval/: ast_grammars.py  chunking.py  code_clone.py  embedding.py  function_locator.py  init_corpus.py  keyword_locator.py  patching.py  reranking.py  retriever.py  schema.sql  traceback_locator.py
plans/: TASK_01_ollama_grammar_harness.md  TASK_02_pydantic_contract_layer.md  TASK_03_safe_command_catalog_renderer.md  TASK_04_corpus_init_pgvector.md  TASK_05_ingestion_slice.md  TASK_06_alert_enricher.md  TASK_07_hybrid_retriever.md  TASK_08_rca_synthesizer.md  TASK_09_langgraph_graph_checkpointer.md  TASK_10_confidence_gates_triage_router.md  TASK_11_escalation_unknown_nodes.md  TASK_12_infra_config_remediation.md  TASK_13_ast_code_retriever.md  TASK_14_patch_generator.md
scratchpad/: probe_reducers.py
tests/: test_ast_code_retriever.py  test_catalog.py  test_corpus.py  test_enricher.py  test_graph_durability.py  test_ingestion.py  test_ollama_client.py  test_patch_generator.py  test_rca_synthesizer.py  test_remediation.py  test_retriever.py  test_routing.py  test_state_validators.py  test_terminal_nodes.py
tests/fixtures/: git_repo.py
