[project]
name = "incidentiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tanmay Pawar", email = "pawartanmay012@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "langgraph>=1.2",
    "langgraph-checkpoint-postgres>=3.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.8",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incidentiq"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
